compile errors/sender2.txt
In file included from C:\Users\marko\OneDrive\Documents\Arduino\adafruit_Lora_32u4_Mailbox_Sender_V3\adafruit_Lora_32u4_Mailbox_Sender_V3.ino:118:
c:\Users\marko\OneDrive\Documents\Arduino\libraries\Low-Power/LowPower.h:167:26: error: #error "Processor architecture is not supported."
  167 |                         #error "Processor architecture is not supported."
      |                          ^~~~~
C:\Users\marko\OneDrive\Documents\Arduino\adafruit_Lora_32u4_Mailbox_Sender_V3\adafruit_Lora_32u4_Mailbox_Sender_V3.ino:120:10: fatal error: avr/wdt.h: No such file or directory
  120 | #include <avr/wdt.h>
      |          ^~~~~~~~~~~
compilation terminated.
exit status 1

Compilation error: avr/wdt.h: No such file or directory